--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,13 +13,22 @@
 <body>
     <div>{{>header}}</div>
     <p>This is portfolio for node.js.</p>
-    <h2><a href="/weather_index">Weather Search</a></h2>
+    <h2><a href="/weather/index">Weather Search</a></h2>
     <p>you can find weather for city whereever you want.</p>
     <ul>
         <li>express : web server</li>
         <li>path : static page</li>
         <li>hbs : template</li>
         <li>request : openweatherapi </li>
+    </ul>
+
+    <h2><a href="https://node-chat-app-n2sj.herokuapp.com/">Chat App</a></h2>
+    <p>Simple chat room with user and room</p>
+    <ul>
+        <li>
+
+
+        </li>
     </ul>
     {{>footer}}
     </script>
