--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,7 +1,7 @@
 <header>
     <h1>{{title}}</h1>
     <a href="/">Home</a>
-    <a href="/weather_index">Weather</a>
+    <a href="/weather/index">Weather</a>
     <a href={{chat_app_url}}>Chat</a>
     <a href="/about">About</a>
     <a href="/help">Help</a>
